# clouddeploy

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
clouddeploy/: __init__.py  __main__.py  cli.py  pty_runner.py  server.py  settings.py
clouddeploy/llm/: llm_provider.py  model_catalog.py  prompts.py  settings.py
clouddeploy/mcp/: mcp_server.py  policy.py  tools.py
clouddeploy/web/: Footer.jsx  app.js  index.html  styles.css
scripts/: push_to_code_engine.sh  push_to_openshift.sh  setup_cloud_cli.sh
tests/: test_imports.py
