[project]
name = "clouddeploy"
version = "0.1.0"
description = "CloudDeploy: enterprise workspace + MCP server to deploy agents to IBM Cloud Code Engine from zero to hero."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "CloudDeploy Team" }]
keywords = ["ibm-cloud", "code-engine", "container-registry", "mcp", "terminal", "devops", "automation", "watsonx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "crewai>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "twine>=5.0",
]

[project.scripts]
clouddeploy = "clouddeploy.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
